@@ -95,3 +95,18 @@ jobs:
           toolchain: stable
       - name: Check no `rustdoc` lint warnings
         run: RUSTDOCFLAGS="-D warnings" cargo doc --no-deps --document-private-items
+
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: nightly
+      - name: Cache build artifacts
+        uses: Swatinem/rust-cache@v2.7.3
+      - name: Run benchmarks
+        run: cargo bench
