@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.8.2\...HEAD[Unreleased]
+
+=== Added
+
+* Add benchmarks ({pull-request-url}/121[#121])
+
 == {compare-url}/v0.8.1\...v0.8.2[0.8.2] - 2024-09-22
 
 === Added
